# ISeeMT

./: .gitignore  BUILD_NOTES.md  DEVELOPMENT.md  INSTALL.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  index.html  package.json  vite.config.js
raw_vb2005/: FrmMonitorSelect.frm  FrmV1.frm  FrmWC.frm  MSSCCPRJ.SCC  Monitor.cls  Monitors.bas  Monitors.cls  MultiMonitorICP.PDM  MultiMonitorICP.vbp  MultiMonitorICP.vbw
scripts/: setup.bat  setup.sh
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  monitor.rs
src/components/: MonitorSelector.vue  TestPatternDisplay.vue  TestPatterns.vue
src/composables/: useI18n.js
src/locales/: en.json  zh.json
standalone/: README.md  index.html  patterns.js
