[package]
name = "iseemt"
version = "1.0.0"
description = "ISee Monitor Test - Multi-monitor screen testing tool"
authors = ["melixyen"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

